--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
         "tailwindcss": "^2.0.2"
     },
     "dependencies": {
-        "sirv-cli": "^1.0.0"
+        "sass": "^1.34.1",
+        "sirv-cli": "^1.0.0",
+        "swiper": "^6.7.0"
     }
 }
