--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dependencies": {
         "sass": "^1.34.1",
         "sirv-cli": "^1.0.0",
-        "swiper": "^6.7.0"
+        "swiper": "^6.7.0",
+        "uuid": "^8.3.2"
     }
 }
